try to fix flex issues for pastry page on mobile

--- a/_sass/_layout/_pastries.scss
+++ b/_sass/_layout/_pastries.scss
@@ -24,6 +24,8 @@
   padding-top: 5rem;
   text-align: center;
   min-height: 30rem;
+  -webkit-flex: 1 1 50%;
+  flex: 1 1 50%;
 }
 
 .pastries__list {
@@ -43,6 +45,8 @@
   justify-content: center;
   text-align: center;
   min-height: 30rem;
+  -webkit-flex: 1 1 50%;
+  flex: 1 1 50%;
 }
 
 .pastries__image--one {
